--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Web site created using create-react-app"/>
         <link rel="apple-touch-icon" href="/portfolio/logo192.png"/>
         <link rel="manifest" href="/portfolio/manifest.json"/>
-        <title>React App</title>
+        <title>Zach Krevis - Software Engineer</title>
         <link href="/portfolio/static/css/main.7c42862c.chunk.css" rel="stylesheet">
     </head>
     <body>
